# ancestors-rs

./: .env.sample  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  cog.toml  diesel.toml  output.html  typos.toml
ancestors-core/: Cargo.toml
ancestors-core/src/: lib.rs  shared_kernel.rs
ancestors-core/src/application/: service.rs
ancestors-core/src/application/repositories/: mod.rs
ancestors-core/src/application/repositories/mem/: mod.rs
ancestors-core/src/application/service/: person_service.rs
ancestors-core/src/application/use_cases/: adding_person.rs  error.rs  mod.rs
ancestors-core/src/component/person/application/: error.rs  mod.rs
ancestors-core/src/component/person/domain/: mod.rs
ancestors-core/src/domain/: conclusion.rs  types.rs
ancestors-core/src/domain/conclusion/: name.rs  name_form.rs  person.rs
ancestors-core/src/domain/types/: name_part_type.rs
ancestors-core/src/infrastructure/repository/in_memory/: mem_persons.rs
ancestors-core/src/port/: repository.rs
ancestors-core/src/port/repository/: mod.rs  person_repository.rs
ancestors-core/src/shared_kernel/: mod.rs  person_id.rs
ancestors-core/src/shared_kernel/person_id/: tests.rs
ancestors-kernel/: Cargo.toml
ancestors-kernel/src/: context.rs  lib.rs
ancestors-r3bl/: Cargo.toml
ancestors-r3bl/src/: lib.rs  main.rs
ancestors-r3bl/src/app/: mod.rs  repl_loop.rs
ancestors-r3bl/src/r3bl_goodies/: color_text.rs  mod.rs  tty.rs
ancestors-realm/: Cargo.toml
ancestors-realm/src/: main.rs  telemetry.rs
ancestors-realm/src/app/: error.rs  mod.rs  model.rs  runtime.rs
ancestors-realm/src/app/session/: action.rs  effect.rs  mod.rs
ancestors-realm/src/contrib/components/: form.rs  form_element.rs  mod.rs
ancestors-realm/src/serialization/: sessions.rs
ancestors-realm/src/ui/: error.rs  mod.rs
ancestors-realm/src/ui/components/: mod.rs
ancestors-realm/src/ui/components/common/: mod.rs
ancestors-realm/src/ui/components/load_db/: db_files.rs  metadata.rs  mod.rs  popup.rs
ancestors-realm/src/ui/components/menu/: buttons.rs  input.rs  mod.rs  title.rs
ancestors-realm/src/ui/components/persons/: actions.rs  messages.rs  mod.rs  person_list.rs  popup.rs
crates/ancestors-cli/: Cargo.toml
crates/ancestors-cli/src/: lib.rs  progress.rs  shared.rs
crates/ancestors-cli/src/cli/: flags.rs
crates/ancestors-kernel/: Cargo.toml
crates/ancestors-kernel/src/: context.rs  lib.rs
crates/ancestors-tui/: Cargo.toml
crates/ancestors-tui/src/: action.rs  app.rs  config.rs  event.rs
crates/ancestors-tui/src/app/components/: home.rs  menu.rs  person_editor.rs  shared.rs  status.rs
crates/ancestors-tui/src/kx_tui/: run_app.rs  tui.rs
crates/ancestors-tui/src/ui/: mod.rs
crates/gen-repo-sqlite/: Cargo.toml
crates/gen-repo-sqlite/src/: lib.rs  migrations.rs  models.rs  pool.rs  schema.rs  sqlite_agent_repo.rs  sqlite_document_repo.rs  sqlite_household_repo.rs  sqlite_person_repo.rs
crates/gen-scraper/: Cargo.toml
crates/gen-scraper/src/: error.rs  lib.rs  scrape.rs
crates/gen-scraper/src/scrape/: process.rs
crates/gen-services/: Cargo.toml
crates/gen-services/src/: lib.rs  repositories.rs  service.rs  services.rs
crates/gen-services/src/repositories/: agent_repositry.rs  document_repository.rs  household_repository.rs  mem.rs  person_repository.rs
crates/gen-services/src/repositories/mem/: mem_agents.rs  mem_documents.rs  mem_households.rs  mem_persons.rs
crates/gen-services/src/services/: agent_service.rs  document_service.rs  error.rs  household_service.rs  person_service.rs
crates/gen-services/src/services/person_service/: tests.rs
crates/gen-services/tests/api/: agent.rs  context.rs  document.rs  household.rs  main.rs  person.rs
crates/gen-test-suite/: Cargo.toml
crates/gen-test-suite/tests/test_suite/: agent.rs  context.rs  document.rs  household.rs  main.rs  person.rs
crates/gen-types/: Cargo.toml
crates/gen-types/src/: batch.rs  conclusion.rs  entities.rs  error.rs  fact.rs  family.rs  lib.rs  place_reference.rs  shared.rs  types.rs  value_objects.rs
crates/gen-types/src/batch/: tests.rs
crates/gen-types/src/conclusion/: name.rs  person.rs
crates/gen-types/src/entities/: agent.rs  document.rs  family.rs  household.rs  person.rs  place.rs  place_relationship.rs  relationship.rs  shared.rs  source.rs
crates/gen-types/src/entities/agent/: agent_id.rs  agent_reference.rs
crates/gen-types/src/entities/document/: document_id.rs
crates/gen-types/src/entities/family/: family_id.rs
crates/gen-types/src/entities/household/: household_id.rs
crates/gen-types/src/entities/person/: person_id.rs
crates/gen-types/src/entities/place/: place_id.rs  place_reference.rs
crates/gen-types/src/entities/shared/: conclusion.rs  (+2 more)
crates/gen-types/src/person_id/: tests.rs
crates/gen-types/src/shared/: id_reference.rs
crates/gen-types/src/value_objects/: attribution.rs  date.rs  evidence_reference.rs  fact.rs  gender.rs  identifier.rs  member_info.rs  name.rs  reference.rs  resource_reference.rs  resource_type.rs  text_value.rs
crates/gen-types/tests/api/: common.rs  conclusions.rs  main.rs
crates/persons/: Cargo.toml
crates/persons/src/: lib.rs  shared_kernel.rs
libs/ancestors-infra-bonsai/: Cargo.toml
libs/ancestors-infra-bonsai/src/repositories/: bonsai_persons.rs  mod.rs
repl/: Cargo.toml
repl/src/: app.rs  lib.rs  main.rs
repl/src/dialogs/: edit_person.rs  mod.rs
tui/: Cargo.toml
tui/assets/: config.json5
tui/src/: action.rs  app.rs  components.rs  config.rs  event.rs  handler.rs  lib.rs  main.rs  mode.rs  tui.rs  update.rs
tui/src/app/: components.rs  tests.rs
tui/src/app/components/: menu.rs  person_editor.rs
tui/src/components/: home.rs  menu.rs  person_editor.rs  status.rs
tui/src/components/shared/: constants.rs
tui/src/config/: tests.rs
tui/src/event/: events.rs  mod.rs
tui/src/kx_tui/: component.rs  mod.rs  tui.rs  widgets.rs
tui/src/kx_tui/widgets/: stateful_table.rs
tui/src/person/: mod.rs
tui/src/repl/: mod.rs
tui/src/ui/: mod.rs
tui/src/ui/components/: mod.rs
(+92 files in other folders)
