[workspace]
resolver = "3"
members = [
  "crates/anc-trace/",
  "crates/ancestors-cli/",
  "crates/ancestors-infra-json/",
  "crates/ancestors-kernel/",
  "crates/ancestors-tui/",
  "crates/ancestors/",
  "crates/gen-repo-sqlite/",
  "crates/gen-scraper/",
  "crates/gen-services/",
  "crates/gen-test-suite/",
  "crates/gen-types/"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.86"

[workspace.dependencies]
# local crates
anc-trace = { path = "./crates/anc-trace" }
ancestors-infra-json = { path = "./crates/ancestors-infra-json", version = "0.1.0" }
ancestors-kernel = { path = "./crates/ancestors-kernel", version = "0.1.0" }
gen-repo-sqlite = { path = "./crates/gen-repo-sqlite" }
gen-scraper = { path = "./crates/gen-scraper" }
gen-services = { path = "./crates/gen-services" }
gen-types = { path = "./crates/gen-types" }
id-ulid = { path = "./crates/id-ulid" }

# non-local crates
chrono = { version = "0.4.34", features = ["serde"] }
config = { version = "0.14", default-features = false, features = [
  "json",
  "json5",
  "json5_rs",
] }
crossterm = "0.27"
diesel = { version = "2.2.4" }
diesel_migrations = { version = "2.3.0" }
env_logger = "0.11"
eyre = "0.6"
gedcomx_date = { git = "https://github.com/kod-kristoff/gedcomx-date-rs", branch = "main" }
gpui = "0.2.2"
hashbrown = "0.16"
json5 = "0.4.1"
log = "0.4.17"
miette = "7.1.0"
oxiri = { version = "0.2.2", features = ["serde"] }
prodash = "28.0.0"
r2d2 = "0.8.10"
ratatui = "0.26"
scraper = "0.18.1"
serde = { version = "^1.0.99" }
serde_json = { version = "1" }
serde_with = { version = "3.6.1" }
thiserror = "1.0.57"
tracing = "0.1.40"
tui-input = "0.8.0"
ulid = "1.0.0"
ureq = { version = "2.9.6", features = ["json"] }
xflags = "0.3.2"

[workspace.lints.clippy]
match_single_binding = "allow"

[workspace.lints.rust]
dead_code = "allow"
unused_variables = "allow"
