[package]
name = "ancestors-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ancestors-core = { version = "0.1.0", path = "../ancestors-core" }
ancestors-infra-json = { version = "0.1.0", path = "../ancestors-infra-json" }
serde_json = { workspace = true }
