[package]
name = "ancestors-realm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ancestors-core = { version = "0.1.0", path = "../ancestors-core" }
ancestors-infra-json = { version = "0.1.0", path = "../ancestors-infra-json" }
anyhow = "1.0.70"
crossterm = "0.25"
log = "0.4.17"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
simplelog = "^0.12"
tui-realm-stdlib = "1.2.0"
tuirealm = "1.8.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
tempfile = "3.8.0"
