[package]
name = "repl"
version = "0.1.0"
edition = "2021"

[dependencies]
ancestors-core = { version = "0.1.0", path = "../ancestors-core" }
ancestors-infra-json = { version = "0.1.0", path = "../ancestors-infra-json" }
clap = { version = "4.1.4", features = ["cargo"] }
env_logger = "0.11.1"
eyre = "0.6.8"
log = "0.4.17"
rustyline = "10.1.1"
serde_json = { workspace = true }
shlex = "1.1.0"
