[package]
name = "ancestors-tui"
version = "0.1.0"
authors = ["Kristoffer Andersson <kristoffer.andersson@gu.se>"]
edition = "2021"

[dependencies]
ancestors-kernel = { version = "0.1.0", path = "../ancestors-kernel" }
crossterm = "0.27.0"
env_logger = "0.9.3"
eyre = "0.6.8"
log = "0.4.17"
ratatui = "0.23.0"
tui-input = "0.8.0"
