[package]
name = "ancestors-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
persons = { version = "0.1.0", path = "../persons" }
ancestors-infra-json = { version = "0.1.0", path = "../ancestors-infra-json" }
serde_json = { workspace = true }
