[package]
name = "ancestors-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
# local deps
gen-services.workspace = true
gen-types.workspace = true
ancestors-infra-json.workspace = true

# external deps
serde_json.workspace = true
