[package]
name = "ancestors-kernel"

version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
ancestors-infra-json.workspace = true
gen-services.workspace = true
gen-types.workspace = true
serde_json.workspace = true
