[package]
name = "ancestors-tui"
version = "0.1.0"
authors = ["Kristoffer Andersson <kristoffer.andersson@gu.se>"]
edition = "2021"

[lib]
doctest = false

[[bin]]
name = "ancestors-tui"
doctest = false
test = false

[dependencies]
config.workspace = true
crossterm.workspace = true
env_logger.workspace = true
eyre.workspace = true
json5.workspace = true
log.workspace = true
ratatui.workspace = true
serde = { workspace = true, features = ["derive"] }
tui-input.workspace = true

# local deps
ancestors-kernel.workspace = true

[lints]
workspace = true
