[package]
name = "ancestors-tui"

version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[[bin]]
doctest = false
name = "ancestors-tui"
test = false

[dependencies]
ancestors-kernel.workspace = true
config.workspace = true
crossterm.workspace = true
env_logger.workspace = true
eyre.workspace = true
json5.workspace = true
log.workspace = true
ratatui.workspace = true
serde = { workspace = true, features = ["derive"] }
tui-input.workspace = true

[lints]
workspace = true
