[package]
name = "gen-repo-sqlite"

version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
chrono.workspace = true
diesel = { workspace = true, features = [
  "chrono",
  "r2d2",
  "returning_clauses_for_sqlite_3_35",
  "sqlite",
] }
diesel_migrations = { workspace = true, features = ["sqlite"] }
eyre.workspace = true
gen-services = { workspace = true }
gen-types = { workspace = true }
miette.workspace = true
r2d2.workspace = true
serde_json.workspace = true

[lints]
workspace = true
