[package]
name = "gen-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
chrono.workspace = true
miette.workspace = true
scraper.workspace = true
thiserror.workspace = true
ureq = { workspace = true, features = ["json"] }

# local deps
gen-types.workspace = true

[lints]
workspace = true
