[package]
name = "gen-scraper"

version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
anyhow = "1.0.102"
chrono.workspace = true
gen-services = { workspace = true }
gen-types.workspace = true
hashbrown.workspace = true
miette.workspace = true
scraper.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ulid.workspace = true
ureq = { workspace = true, features = ["json"] }

[lints]
workspace = true
