[package]
name = "gen-services"

version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
eyre.workspace = true
gen-types.workspace = true
hashbrown.workspace = true
miette.workspace = true
thiserror.workspace = true
