[package]
name = "gen-test-suite"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
doctest = false

[dependencies]
gen-repo-sqlite.workspace = true
gen-services.workspace = true
gen-types.workspace = true

[dev-dependencies]
eyre.workspace = true
tempfile = "3.23.0"

[lints]
workspace = true
