[package]
name = "gen-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
chrono.workspace = true
serde = { workspace = true, features = ["derive"] }

# local deps
id-ulid.workspace = true
oxiri.workspace = true
serde_with = { version = "3.8.1", features = ["chrono"] }

[dev-dependencies]
eyre.workspace = true
