[package]
name = "gen-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
chrono.workspace = true
gedcomx_date.workspace = true
id-ulid.workspace = true
oxiri.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = ["chrono"] }

[dev-dependencies]
eyre.workspace = true
serde_json.workspace = true

[lints]
workspace = true
