[package]
name = "persons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
# gedcomx-model = { workspace = true }
hashbrown.workspace = true
oxiri = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
ulid.workspace = true
