[package]
name = "ancestors-infra-bonsai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ancestors-core = { version = "0.1.0", path = "../../ancestors-core" }
bonsaidb = { version = "0.4.1", default-features = false, features = ["local"] }
serde = { workspace = true }
